Perform last orthographic corrections, increase versioning, resolve TODOs from last meeting

--- a/doc/inc/10_introduction.tex
+++ b/doc/inc/10_introduction.tex
@@ -29,10 +29,11 @@ unterschieden.
 Ein globales Beleuchtungsmodell ist Ray Tracing (zu Deutsch etwa
 ``Strahlenverfolgung''), welches seinen Ursprung in der
 von~\citeauthor{appel_techniques_1968}~\citeyear{appel_techniques_1968}
-vorgestellten Arbeit~\citetitle{appel_techniques_1968} hat.
-\citeyear{whitted_improved_1980} wurde das Verfahren
-von~\citeauthor{whitted_improved_1980}
-in~\citetitle{whitted_improved_1980} verbessert.
+vorgestellten Arbeit~\citetitle{appel_techniques_1968}
+hat~\parencite{appel_techniques_1968}.  \citeyear{whitted_improved_1980}
+wurde das Verfahren von~\citeauthor{whitted_improved_1980}
+in~\citetitle{whitted_improved_1980}
+verbessert~\parencite{whitted_improved_1980}.
 
 Das Verfahren besticht durch Einfachheit und bietet eine hohe
 Bildqualität mit perfekten Spiegelungen und Transparenzen. Mit
