--- a/doc/inc/20_administrative.tex
+++ b/doc/inc/20_administrative.tex
@@ -1,4 +1,4 @@
-% -*- coding: UTF-8 -*-
+%* -*- coding: UTF-8 -*-
 % vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
 % vim: spelllang=de spell
 % chktex-file 27 - disable warning about missing include files
@@ -48,7 +48,8 @@ Nachfolgend sind die abzugebenden Objekte aufgeführt:
         Das Abschlussdokument beinhaltet die theoretischen Grundlagen
         (unter praktischen Aspekten) des Volume Ray Casting Verfahrens.
     \item \textbf{Protoyp} \\
-        Der Prototyp entstand im Rahmen der Bearbeitung der Thematik. Es
-        handelt sich um eine praktische Umsetzung des vorgestellten
+        Der~\hyperref[chap:prototype]{Prototyp} entstand im Rahmen der
+        Bearbeitung der Thematik. Es handelt sich um eine praktische
+        Umsetzung des vorgestellten
         Verfahrens.
 \end{itemize}
