--- a/doc/inc/30_scope.tex
+++ b/doc/inc/30_scope.tex
@@ -38,8 +38,8 @@ Ray Tracings, das so genannte~\textit{Sphere Tracing} vor.
 
 Um die Hypothese zu stützen, dass die komplexen, realistischer wirkenden
 Verfahren wieder in den Fokus der Darstellung von Szenen in Echtzeit
-gerückt sind, wurde ein Prototyp entwickelt, der Sphere Tracing in
-Echtzeit auf der Grafikkarte (GPU) umsetzt.
+gerückt sind, wurde ein~\hyperref[chap:prototype]{Prototyp} entwickelt,
+der Sphere Tracing in Echtzeit auf der Grafikkarte (GPU) umsetzt.
 
 \subsection{Demoszene}
 \label{subsec:demoscene}
@@ -69,15 +69,15 @@ behandelt.
 
 Diese Projektarbeit besteht aus drei Teilen. Der Beschreibung der
 theoretischen Grundlagen, der Beschreibung des als Sphere Tracing
-bekannten Verfahrens sowie der Umsetzung eines Prototypen.
+bekannten Verfahrens sowie der Umsetzung eines~\hyperref[chap:prototype]{Prototypen}.
 
 In dieser Projektarbeit liegt der Fokus vor allem auf der
 (mathematischen) Beschreibung und Anwendung von Oberflächen,
 sowie der Darstellung von Bildern mittels Sphere Tracing.
 
-Bei dem entwickelten Prototypen handelt es sich um eine Art
-Machbarkeitsstudie. Diese zeigt, dass Bilder mittels Sphere Tracing in
-Echtzeit erzeugt und dargestellt werden können.
+Bei dem entwickelten~\hyperref[chap:prototype]{Prototypen} handelt es
+sich um eine Art Machbarkeitsstudie. Diese zeigt, dass Bilder mittels
+Sphere Tracing in Echtzeit erzeugt und dargestellt werden können.
 
 Diese Projektarbeit dient als Vorarbeit und Grundlage für das MSE-Modul
 \textit{MTE7102} --- ``Vertiefungsprojekt 2'' (Folgemodul).
