--- a/doc/inc/40_procedure.tex
+++ b/doc/inc/40_procedure.tex
@@ -31,7 +31,7 @@ wurden folgende Projektphasen gewählt:
     \item Erarbeitung und Festhalten der Anforderungen
     \item Erarbeitung der theoretischen Grundlagen
     \item Erstellung der abschliessenden Dokumentation
-    \item Erstellung eines Prototypen
+    \item Erstellung eines~\hyperref[chap:prototype]{Prototypen}
 \end{itemize}
 
 Die Phasen \textit{Erarbeitung der theoretischen Grundlagen}, \textit{Erstellung
@@ -59,7 +59,7 @@ anderen Phasen ein.
         \ganttbar{Dokumentation}{1}{10} \ganttnewline{}
         \ganttlinkedbar{Korrekturen}{9}{13} \ganttnewline{}
         \ganttmilestone{Rohfassung Dokumentation}{13} \ganttnewline{}
-        \ganttbar{Korrekturen}{14}{19} \ganttnewline{}
+        \ganttbar{Korrekturen}{14}{21} \ganttnewline{}
         \ganttbar{Vorbereitung Präsentation/Verteidigung}{20}{21} \ganttnewline{}
         \ganttlinkedbar{Präsentation/Verteidigung}{22}{22} \ganttnewline{}
         \ganttmilestone{Abgabe Dokumentation}{22}
@@ -113,18 +113,18 @@ fertiggestellten Teilen.
         wurde mittels \LaTeX{} geschrieben.
     \item[Make] Build-Automations-Werkzeug, wurde zur Erstellung dieses Dokumentes eingesetzt.
     \item[CMake] Build-Automations-Werkzeug, wurde zur Erstellung des
-        Prototypen eingesetzt.
+        \hyperref[chap:prototype]{Prototypen} eingesetzt.
     \item[zotero] Ein freies, quelloffenes Literaturverwaltungsprogramm
         zum Sammeln, Verwalten und Zitieren unterschiedlicher Online-
         und Offline-Quellen~\parencite{wikipedia_foundation_zotero_2015}.
     \item[VIM] Vi IMproved. Ein freier, quelloffener Texteditor zur
         Textbearbeitung. Er wurde zum Verfassen der Dokumentation sowie zur
-        Entwicklung des Prototypen eingesetzt.
+        Entwicklung des~\hyperref[chap:prototype]{Prototypen} eingesetzt.
     \item[LLVM] Low Level Virtual Machine. Eine Compiler-Architektur zum
         Kompilieren von Applikationen. Wurde zur Kompilation des
-        Prototypen eingesetzt.
+        \hyperref[chap:prototype]{Prototypen} eingesetzt.
     \item[clang] Ein C-Sprachen-Frontend für LLVM.\ Wurde zur Kompilation
-        des Prototypen eingesetzt.
+        des~\hyperref[chap:prototype]{Prototypen} eingesetzt.
 \end{description}
 
 
@@ -133,11 +133,12 @@ fertiggestellten Teilen.
 
 \begin{description}
     \item[Git] Freie Software zur verteilten Versionsverwaltung, wurde
-        für die Entwicklung dieser Dokumentation sowie des Prototypen verwendet. Die
+        für die Entwicklung dieser Dokumentation sowie
+        des~\hyperref[chap:prototype]{Prototypen} verwendet. Die
         Projektarbeit findet sich
         unter~\href{https://www.github.com/sosterwalder/mte7101-project1}{GitHub}\footnote{
-            \href{https://www.github.com/sosterwalder/mte7101-project1}{https://www.github.com/sosterwalder/mte7101-project1}
-        }.
+        \href{https://www.github.com/sosterwalder/mte7101-project1}{https://www.github.com/sosterwalder/mte7101-project1}
+    }.
     \item[GitHub] Eine freie Hosting-Platform für Git mit Weboberfläche.
 \end{description}
 
@@ -147,7 +148,7 @@ fertiggestellten Teilen.
 \subsubsection{Programmcode}
 \label{ssubsec:standards_guidelines:code}
 
-Der Programmcode des Prototypen, welcher in C++ geschrieben wurde, folgt
+Der Programmcode des~\hyperref[chap:prototype]{Prototypen}, welcher in C++ geschrieben wurde, folgt
 den offiziellen Richtlinien für C++ von Google~\footnote{
     \href{https://google.github.io/styleguide/cppguide.html}{
         https://google.github.io/styleguide/cppguide.html
