--- a/doc/inc/50/51/global_illum_models.tex
+++ b/doc/inc/50/51/global_illum_models.tex
@@ -43,7 +43,7 @@ Bei Blickwinkel abhängigen Algorithmen ist genau das Gegenteil der Fall.
 \subsubsection{Renderinggleichung}
 \label{ssubsec:rendering_equation}
 
-Die unter~\ref{subsec:global_illumination_models} genannten Verfahren
+Die in~\autoref{subsec:global_illumination_models} genannten Verfahren
 berechnen, wie sich Licht von einem Punkt $A$ zu einem anderen Punkt $B$
 im Raum bewegt. Dabei beschreiben sie die Intensität des Lichtes von $A$
 nach $B$. Zusätzlich werden alle Intensitäten von beliebigen Punkten im
