--- a/doc/inc/50/51/local_illum_models.tex
+++ b/doc/inc/50/51/local_illum_models.tex
@@ -37,7 +37,7 @@ Oder mathematisch ausgedrückt:
                 k_{s} \displaystyle\sum_{i=0}^{n - 1} L_{i} \cdot {(\vv{R_{i}} \cdot \vv{V})}^{k_{e}}
 \end{gather}
 
-In der obigen Gleichung~\ref{eq:phong_equation} wurde der emissive Term
+In der obigen~\autoref{eq:phong_equation} wurde der emissive Term
 $I_{\text{emissive}}$ bewusst weggelassen, da er meistens für
 Spezialeffekte statt für die Beleuchtung ``normaler'' Objekte benutzt
 wird~\parencite{hughes_computer_2013}.
