--- a/doc/inc/50_theoretical_background.tex
+++ b/doc/inc/50_theoretical_background.tex
@@ -18,11 +18,12 @@ einem bestimmten Punkt hat. Dabei haben sich die Begriffe des
 \textit{Modelles zur Schattierung (shading model)} etabliert.
 
 \citeauthor{foley_computer_1996} nutzt den Begriff \textit{shading
-model} als Überbegriff. Dieser schliesst auch Beleuchtungsmodelle ein.
-Ein \textit{shading model} definiert, wann und mit welchen Parametern
-ein Beleuchtungsmodell angewendet wird. So nutzen manche \textit{shading
-models} ein Beleuchtungsmodell für jeden Pixel, andere wiederum nur für
-einzelne Pixel und interpolieren dabei die Werte der anderen Pixel.
+model} als Überbegriff~\parencite[S. 721]{foley_computer_1996}. Dieser
+schliesst auch Beleuchtungsmodelle ein.  Ein \textit{shading model}
+definiert, wann und mit welchen Parametern ein Beleuchtungsmodell
+angewendet wird. So nutzen manche \textit{shading models} ein
+Beleuchtungsmodell für jeden Pixel, andere wiederum nur für einzelne
+Pixel und interpolieren dabei die Werte der anderen Pixel.
 
 \input{inc/50/51_illumination_models}
 \input{inc/50/52_shading}
