--- a/doc/inc/60/61_surfaces.tex
+++ b/doc/inc/60/61_surfaces.tex
@@ -71,9 +71,9 @@ Am Beispiel einer Kugel:
     f(\bm{p}, r) = x^{2} + y^{2} + z^{2} - r^{2} &= 0
 \end{align}
 
-Wobei $\bm{p}$ ein Punkt $(x, y, z)$ auf der Oberfläche, welche durch
+Dabei ist $\bm{p}$ ein Punkt $(x, y, z)$ auf der Oberfläche, welche durch
 die Funktion $f$ beschrieben wird, und $r$ der Radius der Kugel
-ist~\parencite[S. 91]{glassner_introduction_1989}.
+~\parencite[S. 91]{glassner_introduction_1989}.
 
 Die implizite Darstellung erlaubt aus mathematischer Sicht eine grössere
 Einflussnahme als die parametrische Darstellung und ist daher sehr
@@ -83,9 +83,10 @@ nützlich für Operationen wie Biegung, Vermischung, Schnitte
 \subsection{Implizite Oberflächen}
 \label{subsec:implicit_surfaces}
 
-Wie in Gleichung~\ref{eq:surface_implicit} beschrieben, ist eine implizite
+Wie in~\autoref{eq:surface_implicit} beschrieben, ist eine implizite
 Oberfläche gemäss~\citeauthor{menon_introduction_1996} typischerweise als
-Kontur einer Funktion mit Wert 0 definiert.
+Kontur einer Funktion mit Wert 0
+definiert~\parencite[S. 1]{menon_introduction_1996}.
 \citeauthor{hart_ray_1993} hingegen definiert eine implizite Oberfläche
 als Funktion $ f(\bm{x}) = \mathbb{R}^{3} \to \mathbb{R} $. Jedem
 Punkt einer Menge $ \bm{p} \in \mathbb{R}^{3} $ wird ein skalarer
@@ -163,7 +164,7 @@ werden kann:
 \end{gather}
 
 Unter Anwendung der allgemeinen Form einer impliziten Gleichung
-(siehe~\ref{eq:surface_implicit}) führt dies zu folgender Gleichung:
+(siehe~\autoref{eq:surface_implicit}) führt dies zu folgender Gleichung:
 
 \begin{gather}\label{eq:surface_implicit_sphere}
     f(\bm{x}) = \|\bm{x}\| - 1
@@ -232,7 +233,7 @@ Beschreibung von Distanzfunktionen dienen.
     \end{gather}
 \end{definition}
 
-Wenn die Gleichung~\ref{eq:signed_distnace_bound} für eine Funktion $f$
+Wenn die~\autoref{eq:signed_distnace_bound} für eine Funktion $f$
 gilt, dann ist $f$ eine \textit{Vorzeichen abhängige Distanzfunktion
     (signed distance function)}.
 
