--- a/doc/inc/60/62/operations.tex
+++ b/doc/inc/60/62/operations.tex
@@ -63,7 +63,8 @@ Distanzfunktion $f(\bm{x})$ \textit{keine Anpassung}.
     d(\bm{x}, \bm{I} \circ f^{-1}(0)) = d(\bm{I}^{-1}(\bm{x}), f^{-1}(0))
 \end{gather}
 
-Wobei $\bm{I}$ eine Isometrie und $f^{-1}(0)$ eine implizite Oberfläche ist.
+Dabei ist $\bm{I}$ eine Isometrie und $f^{-1}(0)$ eine implizite
+Oberfläche.
 
 \subsubsection{Uniforme Skalierung}
 \label{ssubsec:implicit_surfaces_ops_scaling}
@@ -72,13 +73,13 @@ Eine Skalierung bewahrt keine Distanzen. Somit muss die zurückgegebene
 Distanz einer Distanzfunktion entsprechend angepasst werden.
 
 \citeauthor{hart_sphere_1994} gibt die uniforme Skalierung als
-Transformation $\bm{S(x)}$  der Form~\parencite[S. 534]{hart_sphere_1994}:
+Transformation $\bm{S(x)}$  der folgenden Form an~\parencite[S. 534]{hart_sphere_1994}:
 
 \begin{gather}
     \bm{S(x)} = s \cdot \bm{x}
 \end{gather}
 
-an, wobei $s$ der Skalierungsfaktor ist. Die Invertierung der Skalierung
+Dabei ist $s$ der Skalierungsfaktor. Die Invertierung der Skalierung
 ist gegeben als~\parencite[S. 534]{hart_sphere_1994}:
 
 \begin{gather}
@@ -177,4 +178,4 @@ definiert~\parencite[S. 532]{hart_sphere_1994}:
     d(\bm{x}, A \cap B) \geq \max(f_{A}(\bm{x}), f_{B}(\bm{x}))
 \end{gather}
 
-wobei $\bm{x}$ den abzutastenden Punkt im Raum darstellt.
+Dabei stellt $\bm{x}$ den abzutastenden Punkt im Raum dar.
