--- a/doc/inc/60/63/rendering.tex
+++ b/doc/inc/60/63/rendering.tex
@@ -7,9 +7,10 @@
 \label{sec:rendering_implicit_surfaces_Rendering}
 
 Um implizite Oberflächen zu rendern, werden die in
-Abschnitt~\ref{subsec:implicit_surfaces_primitives} angegebenen
+\autoref{subsec:implicit_surfaces_primitives} angegebenen
 Primitiven verwendet.
 
-Zum eigentlichen Rendern wird der Algorithmus~\ref{alg:sphere_tracing}
-mit dem unter~\autoref{sec:rendering_implicit_surfaces_lighting}
-angegebenen Beleuchtungsmodell angewendet.
+Zum eigentlichen Rendern wird der Algorithmus
+in~\autoref{alg:sphere_tracing} mit dem
+unter~\autoref{sec:rendering_implicit_surfaces_lighting} angegebenen
+Beleuchtungsmodell angewendet.
