--- a/doc/inc/80/further_work.tex
+++ b/doc/inc/80/further_work.tex
@@ -16,7 +16,7 @@ Zeit investieren.
 
 Während der Recherche sind einige Thematiken hinzugekommen, sie werden
 aber nicht bearbeitet. Sie zeigen auf, in welche Richtung die
-Weiterführung von Projektarbeit und Prototyp gehen kann.
+Weiterführung von Projektarbeit und~\hyperref[chap:prototype]{Prototyp} gehen kann.
 
 \subsection{Umgebungs-Verdeckung (Ambient Occlusion)}
 \label{subsec:further_work:ambient_occlusion}
@@ -45,7 +45,7 @@ zu harten Übergängen und Artefakten --- es tritt das so genannte
 \citeauthor{hart_sphere_1994} schlägt in~\citetitle{hart_sphere_1994}
 bereits Verfahren zur Kantenglättung vor. Diese verkomplizieren jedoch
 den Rendering-Prozess und haben Schwächen im Umgang mit angenäherten
-Obergrenzen von impliziten Oberflächen.
+Obergrenzen von impliziten Oberflächen~\parencite{hart_sphere_1994}.
 
 \citeauthor{lottes_fxaa_2009} schlägt in seiner
 Arbeit~\citetitle{lottes_fxaa_2009} eine einfache Lösung dieser
