--- a/doc/inc/80_conclusion.tex
+++ b/doc/inc/80_conclusion.tex
@@ -42,10 +42,11 @@ Modellierung von \textit{geometrischen Primitiven} vorgestellt.
 Schliesslich wurde gezeigt, wie die vorgestellten Grundlagen für das
 Rendering von impliziten Oberflächen genutzt werden können.
 
-Im letzten Abschnitt wurde der umgesetzte \textit{Prototyp} vorgestellt,
-wobei einzelne Parameter des Prototyps (\textit{Distanz},
-\textit{Präzision}, die \textit{Anzahl Schritte} und der
-\textit{Skalierungsfaktor für Schatten}) anhand einer Beispielszene
+Im letzten Abschnitt wurde der
+umgesetzte~\hyperref[chap:prototype]{\textit{Prototyp}} vorgestellt,
+wobei einzelne Parameter des~\hyperref[chap:prototype]{Prototyps}
+(\textit{Distanz}, \textit{Präzision}, die \textit{Anzahl Schritte} und
+der \textit{Skalierungsfaktor für Schatten}) anhand einer Beispielszene
 verglichen wurden.
 
 \input{inc/80/further_work.tex}
