--- a/doc/inc/static/abstract.tex
+++ b/doc/inc/static/abstract.tex
@@ -30,7 +30,7 @@ sich um \textit{Volume Ray Casting} bzw.~\textit{Sphere Tracing}.
 
 Um die Hypothese zu stützen, dass die komplexen, realistischer wirkenden
 Verfahren wieder in den Fokus der Darstellung von Szenen in Echtzeit
-gerückt sind, wurde ein Prototyp entwickelt, der Sphere Tracing in
+gerückt sind, wurde ein~\hyperref[chap:prototype]{Prototyp} entwickelt, der Sphere Tracing in
 Echtzeit auf der Grafikkarte (GPU) umsetzt.
 
 Mit dem vorgestellten Verfahren gelingt mittels moderner Grafikkarten
