--- a/doc/inc/static/attachment/10_meeting_minutes.tex
+++ b/doc/inc/static/attachment/10_meeting_minutes.tex
@@ -19,3 +19,4 @@
 \VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151115.rst}
 \newpage
 \VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151206.rst}
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20160125.rst}
