--- a/doc/inc/static/attachment/minutes/20151011.rst
+++ b/doc/inc/static/attachment/minutes/20151011.rst
@@ -86,7 +86,7 @@ Citations
 ~~~~~~~~~~~
 
 * Change the style of citations, which one can be decided later on (CF)
-  (TODO)
+  (DONE, ieee-style is used, SO)
 
 Typography
 ~~~~~~~~~~
