--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -11,8 +11,8 @@
 \begin{versionhistory}
     \vhEntry{0.1}{25.09.2015}{SO}{Initiale Erstellung des Dokumentes}
     \vhEntry{0.2}{27.09.2015}{SO}{Entwickeln einer initialen Struktur,
-        Aufbau der Dokumentation, Entwicklung Kapitel~\ref{chap:procedure}, Beschreibung von
-        Ray Tracing in Kapitel~\ref{chap:theoretical_background}, Hinzufügen des
+        Aufbau der Dokumentation, Entwicklung~\autoref{chap:procedure}, Beschreibung von
+        Ray Tracing in~\autoref{chap:theoretical_background}, Hinzufügen des
         Kapitels~\ref{chap:20_administrative}, Einführen von TODO-Notizen
     }
     \vhEntry{0.3}{29.09.2015}{SO}{Einführen von Meeting
@@ -148,5 +148,10 @@
         von~\autoref{chap:discussion_and_conclusion}~\nameref{chap:discussion_and_conclusion},
         Verfassen von~\autoref{chap:abstract}\nameref{chap:abstract},
         Nachführen der Versionshistorie.
+    }
+    \vhEntry{1.1}{14.02.2016}{SO}{Überarbeitung des gesamten Dokumentes
+        hinsichtlich Rechtschreibung sowie Formulierung. Nachführen der
+        Meeting Minutes vom 25.01.2016. Einarbeiten der besprochenen
+        Punkte. Nachführen der Versionshistorie.
     }
 \end{versionhistory}
