--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -42,11 +42,22 @@
 
 % Bibliography
 %---------------------------------------------------------------------------
+% \usepackage[
+%     style=alphabetic,
+%     backend=biber,
+%     citestyle=authoryear
+% ]{biblatex}
+% \addbibresource{inc/static/bibliography.bib}
 \usepackage[
-    style=alphabetic,
     backend=biber,
-    citestyle=authoryear
+    style=ieee,
+    sortlocale=de_DE,
+    natbib=true,
+    url=false, 
+    doi=true,
+    eprint=false
 ]{biblatex}
+% \bibliographystyle{IEEEtranS}
 \addbibresource{inc/static/bibliography.bib}
 \DefineBibliographyStrings{ngerman}{
     andothers = {{et\,al\adddot}},
@@ -87,6 +98,8 @@
 \definecolor{syntaxRed}{rgb}{0.6,0,0}
 \definecolor{syntaxBlue}{rgb}{0,0,0.5}
 \definecolor{syntaxComment}{rgb}{0,0.5,0}
+% Background colors
+\definecolor{syntaxBackground}{rgb}{0.95, 0.95, 0.95}
 %---------------------------------------------------------------------------
 % Load listing package
 % which produces formatted program listings
@@ -117,17 +130,27 @@
 }
 % Define a list style for Python programming language
 \lstset{language=Python,
-    basicstyle=\ttm,
+    basicstyle=\ttm\ttfamily\linespread{1.15},
+    backgroundcolor = \color{syntaxBackground},
     columns=fullflexible,
     commentstyle=\color{green},
     emphstyle=\ttb\color{red},
-    frame=tb,
+    escapechar=§,
+    frame=tlbr,
+    framesep=0.2cm,
+    framerule=0pt,
+    numbers=left,
+    numbersep=5pt,                   % how far the line-numbers are from the code
+    numberstyle=\tiny\color{gray}, % the style that is used for the line-numbers
     identifierstyle=\color{black},
     keywordstyle=\ttb\color{blue},
     otherkeywords={self},
     % procnamekeys={def,class},
+    showspaces=false,
     showstringspaces=false,
-    stringstyle=\color{green},
+    showtabs=false,
+    tab=\rightarrowfill,
+    xleftmargin=0.7cm,
 }
 %---------------------------------------------------------------------------
 
